review cat; remove finalize()